--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@firebase/auth": "^1.9.1",
     "@firebase/firestore": "^4.7.10",
+    "@reduxjs/toolkit": "^2.6.1",
+    "autoprefixer": "^10.4.21",
     "firebase": "^11.5.0",
     "next": "15.2.3",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
