--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@firebase/auth": "^1.9.1",
     "@firebase/firestore": "^4.7.10",
+    "@mui/material": "^6.4.8",
     "@reduxjs/toolkit": "^2.6.1",
     "autoprefixer": "^10.4.21",
     "firebase": "^11.5.0",
@@ -18,6 +21,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
